Another deployment yaml update -- path to dockr-entrypoint should be root. Remove nginx user directive in conf.

--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -120,7 +120,7 @@ spec:
             containerPort: 9000
             protocol: TCP
          command: ["sh"]
-         args: ["/var/www/html/docker-entrypoint.sh"]
+         args: ["/docker-entrypoint.sh"]
          env:
             - name: MEDIAWIKI_DB_TYPE
               value: {{ .Values.mediawiki.database.type | quote }}
