--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -125,7 +125,7 @@ spec:
             - name: MEDIAWIKI_DB_TYPE
               value: {{ .Values.mediawiki.database.type | quote }}
             - name: MEDIAWIKI_DB_HOST
-              value: {{ .Values.mediawiki.database.host | default (printf "%s-mysql" (include "isd-wiki.fullname" .)) | quote }} # Adjust for other DBs
+              value: {{ .Values.mediawiki.database.host | default (printf "%s-mysql" (include "isd-wiki.fullname" .)) | quote }}
             - name: MEDIAWIKI_DB_NAME
               valueFrom:
                 secretKeyRef:
