--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -67,10 +67,10 @@ spec:
          imagePullPolicy: {{ .Values.nginx.image.pullPolicy }}
          ports:
           - name: http
-            containerPort: {{ .Values.nginx.service.ports.http }}
+            containerPort: 8080
             protocol: TCP
           - name: https
-            containerPort: {{ .Values.nginx.service.ports.https }}
+            containerPort: 8081
             protocol: TCP
          resources:
           {{- toYaml .Values.nginx.resources | nindent 12 }}
@@ -99,13 +99,13 @@ spec:
          readinessProbe:
             httpGet:
               path: /
-              port: 80
+              port: 8080
             initialDelaySeconds: 10
             periodSeconds: 5
          livenessProbe:
             httpGet:
               path: /
-              port: 80
+              port: 8080
             initialDelaySeconds: 30
             periodSeconds: 10
 
