--- a/helm/templates/configmap.yaml
+++ b/helm/templates/configmap.yaml
@@ -17,6 +17,10 @@ data:
     # For more information on configuring MediaWiki, see:
     # https://www.mediawiki.org/wiki/Manual:Configuration_settings
 
+    // Add the vendor directory to PHP's open_basedir
+    ini_set('open_basedir', ini_get('open_basedir') . PATH_SEPARATOR . '/var/www/html/vendor');
+
+
     # Database settings
     $wgDBtype = "{{ .Values.mediawiki.database.type }}";
     $wgDBserver = "{{ .Values.mediawiki.database.host | default (printf "%s-mysql" (include "isd-wiki.fullname" .)) }}";
@@ -25,7 +29,7 @@ data:
     $wgDBpassword = file_get_contents("/var/run/secrets/{{ include "isd-wiki.fullname" . }}-db-credentials/password"); # Read from mounted secret
 
     # Set a dedicated, writable directory for temporary files
-    $wgTmpDirectory = "/var/www/html/tmp";
+    # $wgTmpDirectory = "/var/www/html/tmp";
 
     # Postgres specific settings
     # $wgDBport = 5432;
