Debug php-fpm execution.

--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -118,8 +118,9 @@ spec:
           - name: fpm
             containerPort: 9000
             protocol: TCP
-         command: ["sh"]
-         args: ["/docker-entrypoint.sh"]
+        #  command: ["sh"]
+        #  args: ["/docker-entrypoint.sh"]
+         command: ["tail", "-f", "/dev/null"] 
          env:
             - name: MEDIAWIKI_DB_TYPE
               value: {{ .Values.mediawiki.database.type | quote }}
