Update deployment to remove redundant docker-entrypoint execution.

--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -118,9 +118,7 @@ spec:
           - name: fpm
             containerPort: 9000
             protocol: TCP
-        #  command: ["sh"]
-        #  args: ["/docker-entrypoint.sh"]
-         command: ["tail", "-f", "/dev/null"] 
+        #  command: ["tail", "-f", "/dev/null"] 
          env:
             - name: MEDIAWIKI_DB_TYPE
               value: {{ .Values.mediawiki.database.type | quote }}
