--- a/helm/templates/nginx-configmap.yaml
+++ b/helm/templates/nginx-configmap.yaml
@@ -28,14 +28,14 @@ data:
       location ~ ^/w/(mw-config/)?(index|load|api|thumb|opensearch_desc|rest|img_auth)\.php$ {
           include fastcgi_params;
           fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-          fastcgi_pass php-fpm:9000;  # Replace with your actual PHP-FPM container name or socket
+          fastcgi_pass 127.0.0.1:9000;
       }
 
       # General PHP handler (fallback)
       location ~ \.php$ {
           include fastcgi_params;
           fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-          fastcgi_pass php-fpm:9000;
+          fastcgi_pass 127.0.0.1:9000;
       }
 
       # Static assets
