--- a/helm/templates/nginx-configmap.yaml
+++ b/helm/templates/nginx-configmap.yaml
@@ -21,11 +21,11 @@ data:
 
       # Pretty URLs for articles
       location /wiki/ {
-          rewrite ^/wiki/(.*)$ /w/index.php?title=$1&$args;
+          rewrite ^/wiki/(.*)$ /html/index.php?title=$1&$args;
       }
 
       # MediaWiki entry points
-      location ~ ^/w/(mw-config/)?(index|load|api|thumb|opensearch_desc|rest|img_auth)\.php$ {
+      location ~ ^/html/(mw-config/)?(index|load|api|thumb|opensearch_desc|rest|img_auth)\.php$ {
           include fastcgi_params;
           fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
           fastcgi_pass 127.0.0.1:9000;
@@ -47,14 +47,14 @@ data:
       }
 
       # MediaWiki resources
-      location ~ ^/w/resources/(assets|lib|src) {
+      location ~ ^/html/resources/(assets|lib|src) {
           try_files $uri =404;
           add_header Cache-Control "public";
           expires 7d;
       }
 
       # Skins and extensions assets
-      location ~ ^/w/(skins|extensions)/.+\.(css|js|gif|jpg|jpeg|png|svg|wasm|ttf|woff|woff2)$ {
+      location ~ ^/html/(skins|extensions)/.+\.(css|js|gif|jpg|jpeg|png|svg|wasm|ttf|woff|woff2)$ {
           try_files $uri =404;
           add_header Cache-Control "public";
           expires 7d;
@@ -62,24 +62,24 @@ data:
 
       # Favicon
       location = /favicon.ico {
-          alias /w/images/6/64/Favicon.ico;
+          alias /html/images/6/64/Favicon.ico;
           add_header Cache-Control "public";
           expires 7d;
       }
 
       # Images
-      location /w/images {
+      location /html/images {
           add_header X-Content-Type-Options "nosniff";
           types { text/plain html htm shtml phtml; }
       }
 
-      location /w/images/deleted {
+      location /html/images/deleted {
           deny all;
       }
 
       # REST API
-      location /w/rest.php/ {
-          try_files $uri $uri/ /w/rest.php?$query_string;
+      location /html/rest.php/ {
+          try_files $uri $uri/ /html/rest.php?$query_string;
       }
 
       # robots.txt
