--- a/helm/templates/nginx-configmap.yaml
+++ b/helm/templates/nginx-configmap.yaml
@@ -14,6 +14,8 @@ data:
       root /var/www;
       index index.php;
 
+      port_in_redirect off;
+
       # Redirect root to Main Page
       location = / {
           return 301 /wiki/Main_Page;
