Update nginx conf.

--- a/helm/templates/nginx-configmap.yaml
+++ b/helm/templates/nginx-configmap.yaml
@@ -16,15 +16,11 @@ data:
 
       port_in_redirect off;
 
-      # Redirect root to Main Page
-      set $real_scheme $http_x_forwarded_proto;
+      
+        location = / {
+            return 301 /wiki/Main_Page;
+        }
 
-    #   location = / {
-    #     if ($real_scheme = 'https') {
-    #         return 301 https://$host/wiki/Main_Page;
-    #     }
-    #     return 301 http://$host/wiki/Main_Page;
-    #   }
 
 
       # Health check endpoint
